--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://lindenparkeslab.github.io/snaplab.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: pretty
 theme: just-the-docs
+repository: LindenParkesLab/snaplab.github.io
 
 exclude:
  # from https://github.com/jekyll/jekyll/blob/master/lib/site_template/_config.yml:
