--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: SNaP Lab
-description: Internal website for the SNaP Lab
+title: SNaP lab
+description: Internal website for the SNaP lab
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://lindenparkeslab.github.io/snaplab.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: pretty
